--- a/css/style.css
+++ b/css/style.css
@@ -1221,9 +1221,9 @@ form label {
 }
 
 .btn-primary {
-  background: #ff0f00;
+  background: rgba(255, 15, 0, 0.5);
   color: #fff;
-  border: 2px solid #ff0f00 !important;
+  border: 2px rgba(255, 15, 0, 0) !important;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
   background: #ff6540 !important;
